k8s/user-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-auth
spec:
  selector:
    matchLabels:
      app: user-auth
  template:
    metadata:
      labels:
        app: user-auth
    spec:
      containers:
      - name: user-auth
        image: user-auth:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: user-auth
spec:
  selector:
    app: user-auth
  ports:
  - port: 8081
    targetPort: 8081
---
